--- a/btc_reggressor_model.ipynb
+++ b/btc_reggressor_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhFR+tlUJ80II9Zm5qMtJI",
+      "authorship_tag": "ABX9TyNZJdT499fvV71RWvhz5yur",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,12 +36,13 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.metrics import mean_squared_error\n",
+        "from sklearn.svm import SVR\n",
         "\n"
       ],
       "metadata": {
         "id": "uxG7Rfw_n_Fa"
       },
-      "execution_count": 12,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -53,7 +54,7 @@
       "metadata": {
         "id": "AHgExt8cpfmq"
       },
-      "execution_count": 3,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -65,7 +66,7 @@
       "metadata": {
         "id": "XB79tesPeBzD"
       },
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -89,7 +90,7 @@
       "metadata": {
         "id": "NXuta5lHpvrm"
       },
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -101,7 +102,7 @@
       "metadata": {
         "id": "FbfnDR_9p6u9"
       },
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -113,7 +114,7 @@
       "metadata": {
         "id": "r2UJiVQ5qL-R"
       },
-      "execution_count": 8,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -127,9 +128,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n_2CT_OPqSLJ",
-        "outputId": "5f4fcaf1-fc38-4f72-9fca-74cc196663b0"
+        "outputId": "ce5bcc2d-079f-4785-d29a-45f34a646500"
       },
-      "execution_count": 9,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -139,7 +140,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 24
         }
       ]
     },
@@ -154,9 +155,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VnWHjJ_EqbS7",
-        "outputId": "294dafb4-00ca-40c0-8c4a-02b73b6642db"
+        "outputId": "7ba13ce9-ba19-4dcf-93c5-f38a7df5009a"
       },
-      "execution_count": 14,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +167,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 25
         }
       ]
     },
@@ -179,7 +180,7 @@
       "metadata": {
         "id": "qRHvhzzmqjen"
       },
-      "execution_count": 15,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -190,10 +191,127 @@
         "accuracy"
       ],
       "metadata": {
-        "id": "Gtby2DsiqrQR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gtby2DsiqrQR",
+        "outputId": "ee106d7d-3759-4010-9f52-2273852b3975"
       },
-      "execution_count": null,
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.088183900241519"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#test with svc model\n",
+        "svc_model = SVR(kernel=\"rbf\")"
+      ],
+      "metadata": {
+        "id": "LqvvzPrVlOY_"
+      },
+      "execution_count": 44,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "svc_model.fit(x_train, y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m3SGCTw3l819",
+        "outputId": "303e73fb-f1c2-46d7-854a-e4c375050b88"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVR()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "svc_model.score(x_test, y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2vxiuizLnOzJ",
+        "outputId": "7ef2a734-ebed-45d5-db7b-aa13c46949bf"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.02640458703526405"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred2 = svc_model.predict(x_test)"
+      ],
+      "metadata": {
+        "id": "Or4Yriwtn-O-"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "accuracy = mean_squared_error(y_test, y_pred2, squared=False)\n",
+        "accuracy"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XjecbPKCoOZO",
+        "outputId": "6212bbbc-5bec-4f23-8153-f0f12ed53df3"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "234.46585401060827"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
     }
   ]
 }
